# refactoring_example

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  bootstrap.bat  build_and_test.bat
cmake/: BuildSettings.cmake
doc/: memo.md
src/: CMakeLists.txt  crt_check.cpp  make_statement_data.cpp  make_statement_data.h  pch.h  statement.cpp  statement.h  statement_test.cpp
